fix banner size and position on mobile

--- a/themes/knives-forks-theme/sass/_header.scss
+++ b/themes/knives-forks-theme/sass/_header.scss
@@ -182,3 +182,13 @@
     border-bottom: 3px solid $primary_green_med;
   }
 } //end of main-navigation
+
+// banner images
+
+.banner img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  object-position: right;
+}
